--- a/resources/buy.yml
+++ b/resources/buy.yml
@@ -1,33 +1,33 @@
-# МАГАЗИН
+# SCORE
 # SHOP
 #
-# Категория
+# Category
 # Category
 blocks:
-  # Название категории
-  # Category name
-  name: "Блоки"
-  # Изображение
-  # Image
-  image: "http://universalcrew.ru/images/test.png"
-  # Предметы
-  # Items
-  items:
-    #ID-Damage-<цена за штуку>-<название>-<ссылка на картинку>
-    #ID-Damage-<price for one>-<name>-<image url>
-    - "45-0-30-Кирпич-https://d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/f/ff/Bricks.png"
-    - "45-0-30-Brick-https://d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/f/ff/Bricks.png"
+  # Name of category
+  # Category name
+  name: "Blocks"
+  # Image
+  # Image
+  image: "http://universalcrew.ru/images/test.png"
+  # Items
+  # Items
+  items:
+    # ID-Damage- <price per piece> - <title> - <link to image>
+    # ID-Damage- <price for one> - <name> - <image url>
+    - "45-0-30-Brick-https: //d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/f/ff/Bricks.png"
+    - "45-0-30-Brick-https: //d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/f/ff/Bricks.png"
 items:
-  # Название категории
-  # Category name
-  name: "Предметы"
-  # Изображение
-  # Image
-  image: ""
-  # Предметы
-  # Items
-  items:
-    #ID-Damage-<цена за штуку>-<название>-<ссылка на картинку>
-    #ID-Damage-<price for one>-<name>-<image url>
-    - "280-0-5-Палка-https://d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/a/aa/Stick.png"
-    - "280-0-5-Stick-https://d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/a/aa/Stick.png"
+  # Name of category
+  # Category name
+  name: "Items"
+  # Image
+  # Image
+  image: ""
+  # Items
+  # Items
+  items:
+    # ID-Damage- <price per piece> - <title> - <link to image>
+    # ID-Damage- <price for one> - <name> - <image url>
+    - "280-0-5-Stick-https: //d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/a/aa/Stick.png"
+    - "280-0-5-Stick-https: //d1u5p3l4wpay3k.cloudfront.net/minecraft_gamepedia/a/aa/Stick.png"
